CHANGES IN VERSION 1.5.3
------------------------
 o support reading BEAST MCC trees (multiple trees in one file) via the read.beast function <2016-05-12, Thu>
 
CHANGES IN VERSION 1.5.2
------------------------
 o add multiplot in ggtreeUtilities vignette <2016-05-12, Thu>
 o add example of integrate user's data using phylo4d in treeAnnotation vignette <2016-05-11, Wed>
 o add extend, extendto parameter in geom_hilight <2016-05-10, Tue>
 o geom_hilight now supports hilight tips <2016-05-10, Tue>
   + https://github.com/GuangchuangYu/ggtree/issues/53
 o more accurate ylim & angle for circular layout <2016-05-10, Tue>
   + https://github.com/GuangchuangYu/ggtree/issues/40
 o supports phylo4d object <2016-05-10, Tue>
   + https://github.com/GuangchuangYu/ggtree/issues/47
 
CHANGES IN VERSION 1.5.1
------------------------
 o update vignettes <2016-05-10, Tue>
   + add geom_range example in treeImport
   + add geom_strip and geom_taxalink example in treeAnnotation
   + add ggtreeUtilities vignette
 o gheatmap now works with data.frame of only one column <2016-05-09, Mon>
   + contributed by Justin Silverman <jsilve24@gmail.com>
   + https://github.com/GuangchuangYu/ggtree/pull/57
 o geom_strip for associated taxa <2016-05-09, Mon>
   + https://github.com/GuangchuangYu/ggtree/issues/52
 
CHANGES IN VERSION 1.4.0
------------------------
 o BioC 3.3 released <2016-05-05, Thu>
 
CHANGES IN VERSION 1.3.16
------------------------
 o geom_treescale() supports family argument <2016-04-27, Wed>
   + https://github.com/GuangchuangYu/ggtree/issues/56
 o update fortify.phylo to work with phylo that has missing value of edge length <2016-04-21, Thu>
   + https://github.com/GuangchuangYu/ggtree/issues/54
 o support passing textConnection(text_string) as a file <2016-04-21, Thu>
   + contributed by Casey Dunn <casey_dunn@brown.edu>
   + https://github.com/GuangchuangYu/ggtree/pull/55#issuecomment-212859693
 
CHANGES IN VERSION 1.3.15
------------------------