@@ -4,7 +4,8 @@
 ##' @title ggtree
 ##' @param tr phylo object
 ##' @param mapping aes mapping
-##' @param layout one of 'rectangular', 'slanted', 'fan'/'circular', 'radial' or 'unrooted'
+##' @param layout one of 'rectangular', 'slanted', 'fan', 'circular', 'radial' or 'unrooted'
+##' @param open.angle open angle, only for 'fan' layout
 ##' @param mrsd most recent sampling date
 ##' @param as.Date logical whether using Date class in time tree
 ##' @param yscale y scale
@@ -32,6 +33,7 @@
 ggtree <- function(tr,
                    mapping        = NULL,
                    layout         = "rectangular",
+                   open.angle     = 0,
                    mrsd           = NULL,
                    as.Date        = FALSE,
                    yscale         = "none",
@@ -52,15 +54,7 @@ ggtree <- function(tr,
         ## for 2d tree
         layout <- "slanted"
     }
-    if (layout == "fan" || layout == "circular") {
-        layout <- "circular"
-        type <- "circular"
-    } else if (layout == "radial") {
-        layout <- "slanted"
-        type <- "radial"
-    } else {
-        type <- "none"
-    }
+
     if (is.null(mapping)) {
         mapping <- aes_(~x, ~y)
     } else {
@@ -88,12 +82,14 @@ ggtree <- function(tr,
 
     p <- p + theme_tree()
     
-    if (type == "circular" || type == "radial") {
-        p <- p + coord_polar(theta = "y")
+    if (layout == "circular" || layout == "radial") {
+        p <- layout_circular(p)
         ## refer to: https://github.com/GuangchuangYu/ggtree/issues/6
         ## and also have some space for tree scale (legend)
         p <- p + scale_y_continuous(limits=c(0, max(p$data$y)+1))
-    } 
-
+    } else if (layout == "fan") {
+        p <- layout_fan(p, open.angle)
+    }
+    
     return(p)
 }
