@@ -8,8 +8,8 @@
 \title{visualizing phylogenetic tree and heterogenous associated data based on grammar of graphics
 \code{ggtree} provides functions for visualizing phylogenetic tree and its associated data in R.}
 \usage{
-ggtree(tr, mapping = NULL, layout = "rectangular", mrsd = NULL,
-  as.Date = FALSE, yscale = "none", yscale_mapping = NULL,
+ggtree(tr, mapping = NULL, layout = "rectangular", open.angle = 0,
+  mrsd = NULL, as.Date = FALSE, yscale = "none", yscale_mapping = NULL,
   ladderize = TRUE, right = FALSE, branch.length = "branch.length",
   ndigits = NULL, ...)
 }
@@ -18,7 +18,9 @@ ggtree(tr, mapping = NULL, layout = "rectangular", mrsd = NULL,
 
 \item{mapping}{aes mapping}
 
-\item{layout}{one of 'rectangular', 'slanted', 'fan'/'circular', 'radial' or 'unrooted'}
+\item{layout}{one of 'rectangular', 'slanted', 'fan', 'circular', 'radial' or 'unrooted'}
+
+\item{open.angle}{open angle, only for 'fan' layout}
 
 \item{mrsd}{most recent sampling date}
 
