@@ -1,5 +1,5 @@
 % Generated by roxygen2: do not edit by hand
-% Please edit documentation in R/experimental_function.R
+% Please edit documentation in R/msaplot.R
 \name{msaplot}
 \alias{msaplot}
 \title{msaplot}
